<resources>
    <string name="app_name">CreateAccountScreen</string>
    <string name="instructionsText">To create an account please provide the following</string>
    <string name="emailFieldText">Email</string>
    <string name="passwordFieldText">Set Password:</string>
    <string name="passwordLabelText">Choose Password:</string>
    <string name="confirmPasswordLabelText">Confirm Password:</string>
    <string name="btnSubmitText">Submit</string>
    <string name="name_label_text">First Name:</string>
    <string name="nickname_label_text">Nickname:</string>
    <string name="nickname_field_text">(optional) eg. Mum, Dad, Granny, Grandad</string>
    <string name="last_name_label_text">Last Name:</string>
    <string name="btn_add_child_text">Add Child</string>
    <string name="nickname_explanation_text">(optional) eg. Mum, Dad, Granny, Grandad</string>
    <string name="btn_done_text">Finish</string>
    <string name="btn_goto_text">goto</string>
    <string name="childs_first_name_label_text">Child\'s Name:</string>
    <string name="childs_gender_label_text">Child\'s Gender:</string>
    <string name="male_checkbox_text" >Male</string>
    <string name="female_textbox_text">Female</string>
    <string name="unspecified_gender_checkbox_text">unspecified</string>
    <string name="childs_email_label_text">Child\'s Email:</string>
    <string name="btn_add_this_child_text">Add Child</string>
    <string name="btn_done_adding_children_text">Return To Previous Screen</string>
    <string name="male_radio_text">Male</string>
    <string name="female_radio_text">Female</string>
    <string name="unspecified_gender_radio_text">Unspecified</string>
    <string name="btn_finish_text">Finish</string>
    <string name="welcomeTextText">Welcome to ADHD Mate</string>
    <string name="btnLogInText">Log In</string>
    <string name="btnParentRegisterText">Parent Register</string>
    <string name="btnChildRegister" >Child Register</string>
    <string name="btnGoToAddChildren">Add Children</string>
    <string name="btnFinishSetUp">Finish</string>
    <string name="instructionBeforeFinishText">Make sure to add children to your account before pressing finish</string>
    <string name="addChildInstructions">To add a child to your account, simply enter their email address and press \'Add Child\'. You can add as many as you like. Press \'Finish\' when finished to complete your profile set up</string>
    <string name="logInInstructionsText">Provide your log in details</string>
    <string name="logInEmailFieldText">Email:</string>
    <string name="logInPasswordFieldText">Password</string>
    <string name="logInPasswordLabel">Password:</string>
    <string name="logInButtonText">Log In</string>
    <string name="btnBackText">Go Back</string>
    <string name="logInEmailLabelText">Email:</string>
    <string name="firstNameLabelText">First Name</string>
    <string name="btnSignOutText">Sign Out</string>
    <string name="user_info_page_instructions_text" >When you have filled in the above fields press \'Add Children\' below to move to the next step</string>
    <string name="instructions_child_text">Please note: To create a child account, your parent must create their account first, and add your email address to their account</string>
    <string name="parent_email_label_text" >Parents Email:</string>
    <string name="childRegisterStep1InstructionsText">To create your account please provide your parents email and your own email. Your parent should have already created an account and added your email address</string>
    <string name="parentsEmailLabelText">Parents Email</string>
    <string name="childsEmailLabelText">Your Email:</string>
    <string name="registerChildStep2InstructionsText">Your parents account has been found. Please enter the below information to complete your account set up</string>
    <string name="btnAddReminderText">Add Reminder</string>
    <string name="addReminderLabelText">Add Reminder</string>
    <string name="familyMembersLabelTest">Reminder Is For:</string>
    <string name="btnCancelText">Cancel</string>
    <string name="btnCreateText">Create</string>
    <string name="btnViewDayText">View Day</string>
    <string name="reminderDetailHeaderText">Reminder Detail</string>
    <string name="reminderDetailDateLabelText">Date:</string>
    <string name="reminderDetailTimeLabelText">Time</string>
    <string name="btnSetAlarmText">Set Alarm</string>
    <string name="btnCancelAlarmText">Cancel Alarm</string>
    <string name="reminderDetailAlarmLabelText">Alarm:</string>
    <string name="welcomeScreenInstructionsText">ADHDMate is a shared calendar organisartional app for families. This app can be used to coordinate your families schedules. At this time the app supports a single parent with any number of children. If this is your first time, follow the registration process as follows:</string>
    <string name="welcomeStep1Text">1. Download the app on the parent\'s device.</string>
    <string name="welcomeStep2">2. Press the \'Parent Register\' button and provide the requested information, including the email addresses of all of the children you want added to your account.</string>
    <string name="welcomeStep3">3. Download the app on the children\'s devices.</string>
    <string name="welcomeStep4">4. On each child\'s device, press \'Child Register\' and provide the requested information.</string>
    <string name="btnBackToCalendarText">Back to calendar</string>
</resources>
