<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:text="@string/welcomeTextText"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/welcomeText"
            android:layout_marginTop="17dp"
            android:text="@string/welcomeScreenInstructionsText"
            android:textAlignment="center"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/welcomeStep1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/instructions"
            android:layout_marginTop="18dp"
            android:text="@string/welcomeStep1Text"
            android:textAlignment="center"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/welcomeStep2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/welcomeStep1"
            android:layout_marginTop="18dp"
            android:text="@string/welcomeStep2"
            android:textAlignment="center"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/welcomeStep3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/welcomeStep2"
            android:layout_marginTop="18dp"
            android:text="@string/welcomeStep3"
            android:textAlignment="center"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/welcomeStep4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/welcomeStep3"
            android:layout_marginTop="18dp"
            android:text="@string/welcomeStep4"
            android:textAlignment="center"
            android:textSize="14sp" />


        <Button
            android:id="@+id/btnLogIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcomeStep4"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/btnLogInText" />

        <Button
            android:id="@+id/btnParentRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnLogIn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="6dp"
            android:text="@string/btnParentRegisterText" />

        <Button
            android:id="@+id/btnChildRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnParentRegister"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/btnChildRegister" />
    </RelativeLayout>
</ScrollView>