<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/childRegisterStep1Instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/childRegisterStep1InstructionsText"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/parentsEmailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/childRegisterStep1Instructions"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/parentsEmailLabelText"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/parentsEmailField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/parentsEmailLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/childsEmailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/parentsEmailField"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:text="@string/childsEmailLabelText"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/childsEmailField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/childsEmailLabel"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/childsEmailField"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:text="@string/btnSubmitText" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnCreate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/btnBackText" />
</RelativeLayout>