<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="16dp"
            android:text="@string/instructionsText"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/first_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/instructions_child"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="120dp"
            android:text="@string/firstNameLabelText"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/first_name_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/first_name_label"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/first_name_field"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="86dp"
            android:text="@string/emailFieldText"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/email_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_label"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_field"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/passwordFieldText"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/password_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_label"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/confirm_password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_field"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="27dp"
            android:text="@string/confirmPasswordLabelText"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/confirm_password_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/confirm_password_label"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/confirm_password_field"
            android:layout_centerHorizontal="true"
            android:text="@string/btnSubmitText" />

        <Button
            android:id="@+id/btnGoBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnCreate"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:text="@string/btnBackText" />

        <TextView
            android:id="@+id/instructions_child"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/instructions"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:text="@string/instructions_child_text"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/parent_email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/password_label"
            android:layout_below="@+id/instructions_child"
            android:layout_marginTop="29dp"
            android:text="@string/parent_email_label_text"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/parent_email_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/parent_email_label"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/last_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/first_name_label"
            android:layout_below="@+id/first_name_field"
            android:text="@string/last_name_label_text"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/last_name_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/first_name_field"
            android:layout_below="@+id/last_name_label"
            android:ems="10"
            android:inputType="textPersonName" />

    </RelativeLayout>


</ScrollView>