<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        android:id="@+id/logInInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:text="@string/logInInstructionsText"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/email_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/password_field"
        android:layout_below="@+id/logInEmailLabel"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/password_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_field"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/logInPasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/password_field"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="44dp"
        android:text="@string/logInPasswordLabel"
        android:textAlignment="center"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_field"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:text="@string/logInButtonText" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btnLogIn"
        android:layout_below="@+id/btnLogIn"
        android:layout_marginTop="31dp"
        android:text="@string/btnBackText" />

    <TextView
        android:id="@+id/logInEmailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logInInstructions"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp"
        android:text="@string/logInEmailLabelText"
        android:textSize="18sp" />
    </RelativeLayout>
</ScrollView>