<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/registerChildStep2Instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="6dp"
            android:text="@string/registerChildStep2InstructionsText"
            android:textAlignment="center"
            tools:layout_editor_absoluteX="176dp"
            tools:layout_editor_absoluteY="2dp" />

        <TextView
            android:id="@+id/parentsEmailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/registerChildStep2Instructions"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="31dp"
            android:text="@string/parentsEmailLabelText"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/parentsEmailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/parentsEmailLabel"
            android:ems="10" />

        <TextView
            android:id="@+id/childsEmailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/parentsEmailField"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="31dp"
            android:text="@string/childs_email_label_text"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/childsEmailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/childsEmailLabel"
            android:ems="10" />

        <TextView
            android:id="@+id/first_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/childsEmailField"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="31dp"
            android:text="@string/firstNameLabelText"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/first_name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/first_name_label"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/last_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/first_name_label"
            android:layout_below="@+id/first_name_field"
            android:text="@string/last_name_label_text"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/last_name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/last_name_label"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/last_name_field"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/passwordFieldText"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/password_label"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/confirm_password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_field"
            android:layout_centerHorizontal="true"
            android:text="@string/confirmPasswordLabelText"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/confirm_password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/confirm_password_label"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/confirm_password_field"
            android:text="@string/btnSubmitText" />

        <Button
            android:id="@+id/btnGoBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnCreate"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:text="@string/btnBackText" />

    </RelativeLayout>
</ScrollView>