<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ditkevinstreet.createaccountscreen.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/Instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:layout_weight="1"
            android:text="@string/instructionsText"
            android:textAlignment="center"
            android:textSize="18sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/email_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Instructions"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="58dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text="@string/emailFieldText"
            android:textAlignment="center"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/password_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:text="@string/passwordFieldText"
            android:layout_below="@+id/email_field"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="44dp" />

        <TextView
            android:id="@+id/password_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/email_field"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/passwordLabelText"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/confirm_password_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/password_field"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/confirmPasswordLabelText"
            android:textAlignment="center"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/confirm_password_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:text="@string/passwordFieldText"
            android:layout_below="@+id/confirm_password_label"
            android:layout_alignStart="@+id/password_field" />

        <Button
            android:id="@+id/btnCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/confirm_password_field"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:text="@string/btnSubmitText" />

    </RelativeLayout>
</ScrollView>
